aplicacion de filtros para no mostrar los que estan archivados

--- a/app/views/app-editarClienteEnvio.html
+++ b/app/views/app-editarClienteEnvio.html
@@ -44,7 +44,7 @@
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <label for="NumeroCliEnEd">Numero:</label>
+                                    <label for="NumeroCliEnEd">Número:</label>
                                 </div>
                                 <div class="col-md-8">
                                     <input class="form-control"  id="NumeroCliEnEd" type="text" name="desc" ng-model="sendOrd.number"  required />
