--- a/app/views/app-editarVariante.html
+++ b/app/views/app-editarVariante.html
@@ -55,7 +55,7 @@
                 <label for="variantCurr">Impuesto:</label>
                 <select ng-disabled="variant.status=='U'||variant.status==true" id="variantCurr" class="form-control" ng-model="variant.tax_id">
                   <option value="" selected>No obligatorio</option>
-                  <option ng-repeat="option in taxProxy" value="{{option.id}}" ng-selected="variant.tax.id==option.id" >{{option.name}} : {{option.percentage}}%</option>
+                  <option ng-repeat="option in taxProxy | filter:{status:'D'}" value="{{option.id}}" ng-selected="variant.tax.id==option.id" >{{option.name}} : {{option.percentage}}%</option>
                 </select>
               </div>
             </div>
