--- a/app/views/app-nuevaOrdenC.html
+++ b/app/views/app-nuevaOrdenC.html
@@ -46,7 +46,7 @@ hr{    border-top-color: #455A64}
                   </div>
                   <div class="col-md-9">
                     <select id="productSupp" name="productSupp" class="form-control" ng-change="updateInfo()" ng-model="ordenSupplierId">
-                      <option ng-repeat="option in suppliers" value="{{option.id}}">{{option.name}}</option>
+                      <option ng-repeat="option in suppliers | filter:{status:'D'}" value="{{option.id}}">{{option.name}}</option>
                     </select>
                   </div>
                 </div>
