--- a/app/views/app-nuevaTransferencia.html
+++ b/app/views/app-nuevaTransferencia.html
@@ -32,7 +32,7 @@
                 <label for="productSupp">Seleccione la Locaci&oacute;n:</label>
                 <select id="productSupp" name="productSupp" class="form-control" ng-change="almacenesOrigen()" ng-model="LocOrigen">
                   <option value="">Locaci&oacute;n Origen</option>
-                  <option ng-repeat="option in locations" value="{{option.id}}">{{option.name}}</option>
+                  <option ng-repeat="option in " value="{{option.id}}">{{option.name}}</option>
                 </select>
               </div>
               <div class="form-group">
