--- a/app/views/app-nuevoProveedor.html
+++ b/app/views/app-nuevoProveedor.html
@@ -47,7 +47,7 @@
                                 <div class="col-md-8">
                                     <select class="form-control" id="supplierCurr" ng-model="proveN.currency_id">
                                         <option value="">Selecciona una divisa</option>
-                                        <option ng-repeat="option in currProxy" value="{{option.id}}">{{option.shortcut}}:{{option.name}}</option>
+                                        <option ng-repeat="option in currProxy | filter:{status:'D'}" value="{{option.id}}">{{option.shortcut}}:{{option.name}}</option>
                                     </select>
                                 </div>
                             </div>  
