--- a/app/views/app-editarVariante.html
+++ b/app/views/app-editarVariante.html
@@ -38,16 +38,11 @@
               </div>
             </div>
 
-            <div class="row">
-              <div class="col-md-6 col-md-offset-1">
-                <label for="variantSKU">SKU:</label>
-                <input ng-disabled="variant.status=='U'||variant.status==true=='U'||variant.status==true" id="variantSKU" class="form-control" type="text" name="sku" ng-model="variant.sku" required />
-              </div>
-            </div>
+            
             <div class="row">
               <div class="col-md-6 col-md-offset-1">
                 <label for="variantCodB">Cod. barras:</label>
-                <input ng-disabled="variant.status=='U'||variant.status==true" id="variantCodB" class="form-control" type="text" ng-model="variant.code" required />
+                <input ng-disabled="variant.status=='U'||variant.status==true" id="variantCodB" class="form-control" type="text" ng-model="variant.code"  />
               </div>
             </div>
             <div class="row">
@@ -62,7 +57,7 @@
             <div class="row">
               <div class="col-md-6 col-md-offset-1">
                 <label for="variantPeso">Peso:</label>
-                <input ng-disabled="variant.status=='U'||variant.status==true" id="variantPeso" class="form-control" type="text" ng-model="variant.weight" required />
+                <input ng-disabled="variant.status=='U'||variant.status==true" id="variantPeso" class="form-control" type="text" ng-model="variant.weight"  />
               </div>
             </div>
             <div class="row">
