--- a/app/views/app-subVariantes.html
+++ b/app/views/app-subVariantes.html
@@ -80,7 +80,7 @@
               <div class="col-md-11 col-md-offset-1">
                 <label for="variantP">Precios base:</label>
                 <div class="row">
-                  <div class="col-md-2" ng-repeat="price in variant.variant_prices">
+                  <div class="col-md-2" ng-repeat="price in variant.variant_prices" ng-show="price.price.status!='A'">
                     <label>{{price.label}}</label>
                     <div class="input-group bootstrap-touchspin">
                       <span class="input-group-addon bootstrap-touchspin-prefix">$</span>
