--- a/app/views/login.html
+++ b/app/views/login.html
@@ -15,7 +15,7 @@
                     <span class="input-group-addon">
                       <i class="fa fa-user"></i>
                     </span>
-                    <input type="email" ng-model="loginForm.email" required="required" class="form-control" placeholder="Usuario" data-parsley-minlength="6" placeholder="At least 6 characters">
+                    <input type="email" ng-model="loginForm.email" name="emLog" id="emLog" required="required" class="form-control" placeholder="Usuario" data-parsley-minlength="6" placeholder="At least 6 characters">
                   </div>
                             </div>
               </div>
