--- a/app/assets/less/base/styles.less
+++ b/app/assets/less/base/styles.less
@@ -49,12 +49,54 @@
 @import "bootstrap/tooltip.less";
 @import "bootstrap/popovers.less";
 
+// Components: Misc
+@import "bootstrap/alerts.less";
+@import "bootstrap/thumbnails.less";
+@import "bootstrap/media.less";
+@import "bootstrap/labels.less";
+@import "bootstrap/badges.less";
+@import "bootstrap/progress-bars.less";
+@import "bootstrap/carousel.less";
+@import "bootstrap/jumbotron.less";
+@import "bootstrap/input-groups.less";
 
 // Utility classes
 @import "bootstrap/utilities.less"; // Has to be last to override when necessary
 @import "bootstrap/responsive-utilities.less";
 @import "bootstrap/responsive-embed.less";
 
+// EXTEND BOOTSTRAP FILES WITH Avenger
+//----------------------------------
+
+// Override Bootstrap Styles through the extend- files
+@import "extend-core.less"; 	//Scaffolding, Type, Code, Grid, Tables, Forms, Buttons
+@import "extend-common.less";	//Dropdown, List-groups, Wells, Close
+@import "extend-nav.less";		//Navs, Button-groups, Breadcrumbs, Paginations, Pager
+@import "extend-popovers.less"; //Modals, Tooltips, Popovers
+@import "extend-misc.less";		//Alerts, Thumbnails, Labels, Badges, Progressbars, Input Groups, Carousel...
+
+@import "colorschemes.less";	// Color Schemes
+
+@import "yamm.less";			// Megamenu
+@import "grid-sh.less";			// Same Height Column
+
+// Theme Specific
+@import "layout.less";  		// Sidebar/Layout of the theme
+@import "topnav.less";			// Topnav
+@import "rightbar.less";		// Rightbar
+@import "leftbar.less";			// Leftbar
+
+@import "navbar.less";			// Modified Navbar of Bootstrap
+@import "panels.less";			// Completely overhauled panels
+
+@import "pricing-table.less"; 	// Pricing Table Component
+@import "tiles.less"; 			// Tiles Component
+@import "panels-custom.less"; 	// Custom Panels Component
+@import "tabs.less"; 			// Inline Tabs and Accordions Component
+@import "timeline.less";		// Timeline
+@import "widgets.less";			// Widgets
+
+@import "apps.less";    		// Custom plugin stylings
 
 // Other Plugin Files
 //----------------------------------
