--- a/app/assets/less/styles.less
+++ b/app/assets/less/styles.less
@@ -5,6 +5,7 @@
 @import "layout.less";  		// Sidebar/Layout of the theme
 @import "tabs.less"; 			// Inline Tabs and Accordions Component
 @import "apps.less";    		// Custom plugin stylings
+@import "extend-angular.less"; 	//Extend Bootstrap for Angular
 
 // Other Plugin Files
 //----------------------------------
