--- a/app/views/app-vistaProductos.html
+++ b/app/views/app-vistaProductos.html
@@ -1,4 +1,3 @@
-
 <div ng-controller="EditCtrlProductos">
     <ol class="breadcrumb">
         <li class=""><a href="#">Home</a></li>
@@ -25,10 +24,10 @@
                                 <th>Variantes</th> 
                             </tr>
                         </thead>
-                        <tr ng-repeat=" prod in productos | filter:{name: searchText}| filter:{status:'D'}" >
+                        <tr ng-repeat=" prod in productResume | filter:{name: searchText}" >
                             <td><a href="#/app-vistaProductoInd/{{prod.id}}">{{ prod.name }}</a></td>
                             <td>{{ prod.brand.name }}</td>
-                            <td>{{prod.variants.length}}</td>
+                            <td>{{prod.variant_count.total}}</td>
                         </tr>
                     </table> 
                 </div>
