--- a/app/views/app-vistaProductos.html
+++ b/app/views/app-vistaProductos.html
@@ -24,7 +24,7 @@
                                 <th>Variantes</th> 
                             </tr>
                         </thead>
-                        <tr ng-repeat=" prod in productResume | filter:{name: searchText}" >
+                        <tr ng-repeat=" prod in productResume | filter:{name: searchText} | filter:{status:'D'}" >
                             <td><a href="#/app-vistaProductoInd/{{prod.id}}">{{ prod.name }}</a></td>
                             <td>{{ prod.brand.name }}</td>
                             <td>{{prod.variant_count.total}}</td>
