fix product creation

--- a/app/views/app-defVariantes.html
+++ b/app/views/app-defVariantes.html
@@ -14,7 +14,7 @@
   border-style: solid;
 }
     </style>
-<div ng-controller="EditCtrlProductos">
+<div ng-controller="CtrlProductosDefVariantes">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
       <li class=""><a href="#/app-vistaProductos">Productos</a></li>
@@ -58,7 +58,7 @@
           </div>
         </div>
       </div>
-      <input ng-disabled="genVar" type="submit" class="btn btn-primary pull-right" value="Generar Variantes" style="background-color:#93351F;border-color:#93351F;">
+      <input ng-disabled="genVar" type="submit" class="btn btn-primary pull-right" value="Generar Variantes" style="background-color:#93351F;border-color:#93351F;margin-top:5px;">
     </form>    
   </div>
 </div>
