--- a/app/views/app-vistaProductos.html
+++ b/app/views/app-vistaProductos.html
@@ -1,4 +1,4 @@
-<div ng-controller="EditCtrlProductos">
+<div ng-controller="CtrlProductos">
     <ol class="breadcrumb">
         <li class=""><a href="#">Home</a></li>
     </ol>
