--- a/app/views/app-nuevoProducto.html
+++ b/app/views/app-nuevoProducto.html
@@ -5,7 +5,7 @@
 }
 .top-buffer { margin-top:20px; }
     </style>
-<div ng-controller="EditCtrlProductos">
+<div ng-controller="CtrlProductoNuevo">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
       <li class=""><a href="#/app-vistaProductos">Productos</a></li>
