--- a/app/views/app-vistaLocacion.html
+++ b/app/views/app-vistaLocacion.html
@@ -3,8 +3,7 @@
         <li class=""><a href="#/">Home</a></li>
         <li class="active"><a href="#">Productos Global</a></li>
     </ol>
-    
-    <div class="page-heading">            
+    <div class="page-heading">
         <h1>Productos Global</h1>
         <div class="options">
             <div class="btn-toolbar">
@@ -15,19 +14,19 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div class="panel panel-transparent">         
+          {{productosInLoc}}
+            <!--<div class="panel panel-transparent">
                 <div class="panel-body">
                     <div class="input mb-xl">
                         <input type="text" ng-model="filterOptions.filterText" class="form-control" placeholder="Buscar...">
                     </div>
-
                     <div class="panel">
                         <div class="panel-body no-padding">
                             <div style="height: 512px;" ng-grid="gridOptions"></div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
         </div>
     </div>
